Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                 <!-- Tab Content Containers -->
                 <div id="gallery-content">
-                    <!-- Tab 1: Portraits (3 Images) -->
+                    <!-- Tab 1: Portraits (3 Images) --><img src="./yuna-waterfall.jpg" alt="A person sitting by a waterfall">
                     <div id="tab-portraits" class="tab-content grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                         <!-- Image 1: Placeholder/Actual Image 1 -->
                         <div class="light-card rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 cursor-pointer animate-fade-in" style="animation-delay: 1.1s;" onclick="openLightbox('1000038351.jpg', 'Self-Portrait for portfolio')">
@@ -493,4 +493,5 @@
         });
     </script>
 </body>
+
 </html>
