--- a/index.html
+++ b/index.html
@@ -240,8 +240,13 @@
 
                 <!-- Tab Content Containers -->
                 <div id="gallery-content">
-                    <!-- Tab 1: Portraits (3 Images) --><img src="./yuna-waterfall.jpg" alt="A person sitting by a waterfall">
-                    <div id="tab-portraits" class="tab-content grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                        <!-- Tab 1: Portraits (3 Images) -->          
+                        <!-- Tab 1: Portraits (3 Images) --><img src="./yuna-waterfall.jpg" alt="A person sitting by a waterfall">
+                        <div class="Tab-portraits tab-content grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                        <!-- Image 1: Placeholder/Actual Image 1 -->
+                        <div class="light-card rounded-xl overflow-hidden shadow-1g hover:shadow-xl transition duration-300 cursor-pointer animate-fade-in" style>
+                        <img src="1000038351.jpg" alt="Portrait Sample 1" class="w-full h-80 object-cover" onerror="this.src='placehold.co'">
+                        <div class="Tab-portraits tab-content grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                         <!-- Image 1: Placeholder/Actual Image 1 -->
                         <div class="light-card rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 cursor-pointer animate-fade-in" style="animation-delay: 1.1s;" onclick="openLightbox('1000038351.jpg', 'Self-Portrait for portfolio')">
                             <img src="1000038351.jpg" alt="Portrait Sample 1" class="w-full h-80 object-cover" onerror="this.src='https://placehold.co/800x600/d7ccc8/382200?text=Portrait+1+Missing';">
@@ -495,3 +500,4 @@
 </body>
 
 </html>
+
